# nix-devshells

./: .gitignore  .pre-commit-config.yaml  DOCUMENTATION_TEMPLATE.md  DOCUMENTATION_UPDATES.md  FIRMWARE_MANAGEMENT.md  Makefile  README.md  SELF_CONTAINMENT_FIX.md  SUBMODULE_SETUP.md  TEMPLATE_STANDARDS.md  flake.nix  flakes.code-workspace  flakes.sln  project.toml  shell.nix
ada-dev/: .editorconfig  .envrc  .gitignore  Makefile  README.md  flake.nix  project.toml  shell.nix
arduino/: .editorconfig  .envrc  .gitignore  Makefile  README.md  flake.nix  platformio.ini  project.toml  shell.nix
c/: .editorconfig  .gitignore  Makefile  README.md  flake.nix  project.toml  shell.nix
circuitpython/: .editorconfig  .gitignore  Makefile  README.md  default.nix  flake.nix  project.toml  shell.nix
cl-dev/: .editorconfig  .envrc  .gitignore  Makefile  README.md  flake.nix  project.toml  shell.nix
clojure-dev/: .editorconfig  .envrc  .gitignore  Makefile  README.md  flake.nix  project.toml  shell.nix
cobol-dev/: .editorconfig  .envrc  .gitignore  Makefile  README.md  flake.nix  project.toml  shell.nix
cpp-devshell/: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  default.nix  devshell-packages.nix  flake.nix  project.toml  shell.nix
dotnet/: .editorconfig  .gitignore  Makefile  Program.cs  README.md  SampleApp.csproj  deps.nix  flake.nix  install-templates.sh  project.toml  shell.nix
embedded-rust/: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  flake.nix  project.toml  shell.nix
embedded-rust/examples/cortex_m/: main.rs
embedded-rust/examples/riscv/: main.rs
embedded-rust/examples/stm32/: main.rs
embedded-rust/src/: lib.rs  main.rs
erlang-dev/: .editorconfig  .envrc  .gitignore  Makefile  README.md  flake.nix  project.toml  shell.nix
forth-dev/: .editorconfig  .envrc  .gitignore  Makefile  README.md  flake.nix  hello.fs  project.toml  shell.nix
freebasic-dev/: .editorconfig  .envrc  .gitignore  Makefile  README.md  flake.nix  project.toml  shell.nix
kdeqt6-dev/: .envrc  CMakeLists.txt  README.md  flake.nix
kdeqt6-dev/src/: main.cpp
python/: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  shell.nix
python/src/app/: __main__.py  main.py
(+152 files in other folders)
