[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-python-app"
version = "0.1.0"
description = "Skeletal Python project initialized from template"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
app = "app.main:main"
